{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 47,
  "lineage": "07f3e6e5-4c83-b3c3-33c9-992878736ab7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22",
                  "8080",
                  "8081"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-19T08:57:11.782-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fair-solution-359712/global/firewalls/firewallapp",
            "log_config": [],
            "name": "firewallapp",
            "network": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/global/networks/capstone-vpc-network",
            "priority": 1000,
            "project": "fair-solution-359712",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/global/firewalls/firewallapp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "master-vm-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewalls",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8080",
                  "80",
                  "8081"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-19T08:57:11.703-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fair-solution-359712/global/firewalls/firewallsapp",
            "log_config": [],
            "name": "firewallsapp",
            "network": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/global/networks/capstone-vpc-network",
            "priority": 1000,
            "project": "fair-solution-359712",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/global/firewalls/firewallsapp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "node-vm-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220905",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/zones/us-west1-b/disks/capstone-project-master-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fair-solution-359712/zones/us-west1-b/instances/capstone-project-master-1",
            "instance_id": "6447239436282703798",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "9KTke_WNxlE=",
            "name": "capstone-project-master-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.118.197.4",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/global/networks/capstone-vpc-network",
                "network_ip": "10.138.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/regions/us-west1/subnetworks/capstone-vpc-network",
                "subnetwork_project": "fair-solution-359712"
              }
            ],
            "project": "fair-solution-359712",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/zones/us-west1-b/instances/capstone-project-master-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "master-vm-instance"
            ],
            "tags_fingerprint": "xAw-fxHWk0g=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "node-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220905",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/zones/us-west1-b/disks/capstone-project-node-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fair-solution-359712/zones/us-west1-b/instances/capstone-project-node-1",
            "instance_id": "7966976252051795894",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "9KTke_WNxlE=",
            "name": "capstone-project-node-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.168.249.140",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/global/networks/capstone-vpc-network",
                "network_ip": "10.138.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/regions/us-west1/subnetworks/capstone-vpc-network",
                "subnetwork_project": "fair-solution-359712"
              }
            ],
            "project": "fair-solution-359712",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/zones/us-west1-b/instances/capstone-project-node-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "node-vm-instance"
            ],
            "tags_fingerprint": "tz5dgL2Z8o8=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220905",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/zones/us-west1-b/disks/capstone-project-node-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fair-solution-359712/zones/us-west1-b/instances/capstone-project-node-2",
            "instance_id": "6048030545471156150",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "9KTke_WNxlE=",
            "name": "capstone-project-node-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.168.229.153",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/global/networks/capstone-vpc-network",
                "network_ip": "10.138.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/regions/us-west1/subnetworks/capstone-vpc-network",
                "subnetwork_project": "fair-solution-359712"
              }
            ],
            "project": "fair-solution-359712",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/zones/us-west1-b/instances/capstone-project-node-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "node-vm-instance"
            ],
            "tags_fingerprint": "tz5dgL2Z8o8=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/fair-solution-359712/global/networks/capstone-vpc-network",
            "mtu": 0,
            "name": "capstone-vpc-network",
            "project": "fair-solution-359712",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fair-solution-359712/global/networks/capstone-vpc-network"
          }
        }
      ]
    }
  ]
}